Greasepencil-object branch color boxes don't update in grease pencil panels until the color selector has closed #51942

Closed
opened 2017-06-30 17:00:01 +02:00 by Thomas Downs · 8 comments

System Information
Arch Linux
Nvidia 750ti

Blender Version
Broken: d958084187baf7ebf4385d15b7c8cfa4fc5ce499 (for at least a week)
Worked: Blender 2.8 branch

Short description of error
When the color selector dialog is up when changing a grease pencil related color, the grease pencil viewport colors can be changed live, but the panel showing the colors doesn't update until after the color dialog has closed. Both the grease pencil object data and grease pencil colors panels are affected.
The world color and material properties in EEVEE shown in the panel are live.

Exact steps for others to reproduce the error
Draw a stroke in grease pencil, go to the grease pencil colors panel and change a color but do not exit the dialog; notice that the strokes change color, but none of the color buttons on the panel change until after the dialog is closed.

**System Information** Arch Linux Nvidia 750ti **Blender Version** Broken: d958084187baf7ebf4385d15b7c8cfa4fc5ce499 (for at least a week) Worked: Blender 2.8 branch **Short description of error** When the color selector dialog is up when changing a grease pencil related color, the grease pencil viewport colors can be changed live, but the panel showing the colors doesn't update until after the color dialog has closed. Both the grease pencil object data and grease pencil colors panels are affected. The world color and material properties in EEVEE shown in the panel are live. **Exact steps for others to reproduce the error** Draw a stroke in grease pencil, go to the grease pencil colors panel and change a color but do not exit the dialog; notice that the strokes change color, but none of the color buttons on the panel change until after the dialog is closed.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tnelsond

Added subscriber: @tnelsond
Antonio Vazquez self-assigned this 2017-06-30 17:05:28 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed with commit d0c17ef893fe

Fixed with commit d0c17ef893fe
Author

I tried commit d0c17ef893fe out and the bug is still there for me. And 927694fd13 didn't work either. The color box still doesn't update until after the color selector dialog is closed.

I tried commit d0c17ef893fe out and the bug is still there for me. And 927694fd13 didn't work either. The color box still doesn't update until after the color selector dialog is closed.

I cannot reproduce the problem now. Looks this video:

GIF_gp_color_update.gif

I cannot reproduce the problem now. Looks this video: ![GIF_gp_color_update.gif](https://archive.blender.org/developer/F648542/GIF_gp_color_update.gif)
Author

Odd... I just recloned blender and made a fresh build, but I still get this. animated.gif

Odd... I just recloned blender and made a fresh build, but I still get this. ![animated.gif](https://archive.blender.org/developer/F648743/animated.gif)

I will test in different hardware to verify if works only in some systems.

I will test in different hardware to verify if works only in some systems.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51942
No description provided.