Fix T51942: Color not updated in UI panel

When update the color in the panel, the color box was not updated after release control.