source/blender/makesrna/intern/rna_palette.c
@@ -55,7 +55,7 @@
 static void rna_GPencil_update(Main *UNUSED(bmain), Scene *UNUSED(scene), PointerRNA *UNUSED(ptr))
 {
 	BKE_gpencil_batch_cache_alldirty();
-	WM_main_add_notifier(NC_GPENCIL | NA_EDITED, NULL);
+	WM_main_add_notifier(NC_SCREEN | NC_GPENCIL | NA_EDITED, NULL);
 }
 
 static PaletteColor *rna_Palette_color_new(Palette *palette)
